<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="@dimen/submit_answer_padding_sides"
        android:layout_marginRight="@dimen/submit_answer_padding_sides"
        android:layout_marginLeft="@dimen/submit_answer_padding_sides"
        android:gravity="center"
        android:textSize="26sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/final_page_string_one"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/submit_answer_padding_sides"
        android:layout_marginRight="@dimen/submit_answer_padding_sides"
        android:layout_marginLeft="@dimen/submit_answer_padding_sides"
        android:layout_marginBottom="@dimen/submit_answer_padding_sides"
        android:gravity="center"
        android:textSize="26sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/final_page_string_two"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textStyle="italic"
        android:textColor="@color/colorAccent"
        android:text="@string/green_details"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textStyle="italic"
        android:textColor="@color/incorrectRed"
        android:text="@string/red_details"/>
    <GridLayout
        android:layout_width="@dimen/grid_view_size"
        android:layout_height="@dimen/grid_view_size"
        android:layout_gravity="center_horizontal"
        android:rowCount="3"
        android:columnCount="2"
        android:padding="16dp">
        <TextView
            android:id="@+id/final_question_one"
            style="@style/final_gridview_display"
            android:textSize="@dimen/submit_answer_text_size"
            android:textColor="@color/colorPrimaryWhite"
            android:gravity="center_horizontal"
            android:text="@string/one"/>
        <TextView
            android:id="@+id/final_question_two"
            style="@style/final_gridview_display"
            android:textSize="@dimen/submit_answer_text_size"
            android:textColor="@color/colorPrimaryWhite"
            android:gravity="center_horizontal"
            android:text="@string/two"/>
        <TextView
            android:id="@+id/final_question_three"
            style="@style/final_gridview_display"
            android:textSize="@dimen/submit_answer_text_size"
            android:textColor="@color/colorPrimaryWhite"
            android:gravity="center_horizontal"
            android:text="@string/three"/>
        <TextView
            android:id="@+id/final_question_four"
            style="@style/final_gridview_display"
            android:textSize="@dimen/submit_answer_text_size"
            android:textColor="@color/colorPrimaryWhite"
            android:gravity="center_horizontal"
            android:text="@string/four"/>
        <TextView
            android:id="@+id/final_question_five"
            style="@style/final_gridview_display"
            android:textSize="@dimen/submit_answer_text_size"
            android:textColor="@color/colorPrimaryWhite"
            android:gravity="center_horizontal"
            android:text="@string/five"/>
        <TextView
            android:id="@+id/final_question_six"
            style="@style/final_gridview_display"
            android:textSize="@dimen/submit_answer_text_size"
            android:textColor="@color/colorPrimaryWhite"
            android:gravity="center_horizontal"
            android:text="@string/six"/>
    </GridLayout>
    <Button
        android:id="@+id/submitScoreToSocialMedia"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:onClick="onClickSubmitScoreToSocialMedia"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        android:text="@string/submit_to_social_media"/>
</LinearLayout>