<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">
    <ImageView
        android:layout_marginTop="@dimen/photo_padding_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/imageview_layout_height"
        android:scaleType="centerCrop"
        android:src="@drawable/firefly_one"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/question_three_text"
        style="@style/QuestionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_three"
        />
    <LinearLayout
        android:id="@+id/question_three_linear_switch_display"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/question_padding_vertical">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="end"
            android:layout_marginLeft="@dimen/submit_answer_padding_sides"
            android:layout_marginStart="@dimen/submit_answer_padding_sides"
            android:layout_marginRight="@dimen/submit_answer_half_padding_sides"
            android:layout_marginEnd="@dimen/submit_answer_half_padding_sides"
            android:layout_weight="1">
            <CheckedTextView
                android:id="@+id/question_three_optionA"
                style="@style/CheckedTextViewFormatting"
                android:text="@string/q3_a1"/>
            <CheckedTextView
                android:id="@+id/question_three_optionB"
                style="@style/CheckedTextViewFormatting"
                android:text="@string/q3_a2"/>
            <CheckedTextView
                android:id="@+id/question_three_optionC"
                style="@style/CheckedTextViewFormatting"
                android:text="@string/q3_a3"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="end"
            android:layout_marginLeft="@dimen/submit_answer_padding_sides"
            android:layout_marginStart="@dimen/submit_answer_padding_sides"
            android:layout_marginRight="@dimen/submit_answer_half_padding_sides"
            android:layout_marginEnd="@dimen/submit_answer_half_padding_sides"
            android:layout_weight="1">
            <CheckedTextView
                android:id="@+id/question_three_optionD"
                style="@style/CheckedTextViewFormatting"
                android:text="@string/q3_a4"/>
            <CheckedTextView
                android:id="@+id/question_three_optionE"
                style="@style/CheckedTextViewFormatting"
                android:text="@string/q3_a5"/>
            <CheckedTextView
                android:id="@+id/question_three_optionF"
                style="@style/CheckedTextViewFormatting"
                android:text="@string/q3_a6"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/question_three_show_checked_text_views"
        android:onClick="onClickInitiateCheckedTextView"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/submit_answer_padding_sides"
        android:layout_marginLeft="@dimen/submit_answer_padding_sides"
        android:layout_marginRight="@dimen/submit_answer_padding_sides"
        android:layout_marginTop="@dimen/submit_answer_padding_sides"
        android:textAllCaps="false"
        android:text="@string/show_options"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/submit_answer_text_small_size"/>
    <Button
        android:id="@+id/submit_answer_question_three"
        android:onClick="onClickSubmitQuestionThree"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/submit_answer_padding_sides"
        android:layout_marginRight="@dimen/submit_answer_padding_sides"
        android:textAllCaps="false"
        android:text="@string/submit_answer"
        android:textSize="@dimen/submit_answer_text_size"/>
    <TextView
        android:visibility="gone"
        android:id="@+id/question_three_extra_credit"
        style="@style/QuestionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/extra_credit"/>
    <TextView
        android:visibility="gone"
        android:id="@+id/question_three_extra_credit_text"
        style="@style/ExtraCreditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_three_extracredit"/>
    <RadioGroup
        android:visibility="gone"
        android:id="@+id/questionThreeExtraCreditRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/uniform_left_margin_answer_selections">
        <RadioButton
            android:id="@+id/question_threeEC_a1"
            android:theme="@style/RadioButtonSelectionOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3ec_a1"/>
        <RadioButton
            android:id="@+id/question_threeEC_a2"
            android:theme="@style/RadioButtonSelectionOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3ec_a2"/>
        <RadioButton
            android:id="@+id/question_threeEC_a3"
            android:theme="@style/RadioButtonSelectionOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3ec_a3"/>
        <RadioButton
            android:id="@+id/question_threeEC_a4"
            android:theme="@style/RadioButtonSelectionOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3ec_a4"/>
    </RadioGroup>
    <Button
        android:id="@+id/submit_answer_question_threeEC"
        android:onClick="onClickSubmitQuestionThreeExtra"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/submit_answer_padding_sides"
        android:layout_marginLeft="@dimen/submit_answer_padding_sides"
        android:layout_marginRight="@dimen/submit_answer_padding_sides"
        android:textAllCaps="false"
        android:text="@string/submit_answer"
        android:textSize="@dimen/submit_answer_text_size"/>

</LinearLayout>