<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">
    <ImageView
        android:paddingTop="@dimen/photo_padding_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/imageview_layout_height"
        android:scaleType="centerInside"
        android:src="@drawable/firefly_cast"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/question_five_text"
        style="@style/QuestionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_five"/>
    <RadioGroup
        android:id="@+id/questionFiveRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/uniform_left_margin_answer_selections">
        <RadioButton
            android:id="@+id/question_five_a1"
            android:theme="@style/RadioButtonSelectionOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q5_a1"/>
        <RadioButton
            android:id="@+id/question_five_a2"
            android:theme="@style/RadioButtonSelectionOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q5_a2"/>
        <RadioButton
            android:id="@+id/question_five_a3"
            android:theme="@style/RadioButtonSelectionOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q5_a3"/>
        <RadioButton
            android:id="@+id/question_five_a4"
            android:theme="@style/RadioButtonSelectionOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q5_a4"/>
    </RadioGroup>
    <Button
        android:id="@+id/submit_answer_question_five"
        android:onClick="onClickSubmitQuestionFive"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/submit_answer_padding_sides"
        android:textAllCaps="false"
        android:text="@string/submit_answer"
        android:textSize="@dimen/submit_answer_text_size"/>



</LinearLayout>