<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">
    <ImageView
        android:paddingTop="@dimen/photo_padding_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/imageview_layout_height"
        android:scaleType="fitCenter"
        android:src="@drawable/ship_shape"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/question_two_text"
        style="@style/QuestionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_two"
        />
    <EditText
        style="@style/EditTextFormatting"
        android:id="@+id/question_two_answerEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/question_two_hint"/>
    <Button
        android:id="@+id/submit_answer_question_two"
        android:onClick="onClickSubmitQuestionTwo"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/submit_answer_padding_sides"
        android:textAllCaps="false"
        android:text="@string/submit_answer"
        android:textSize="@dimen/submit_answer_text_size"/>
</LinearLayout>